the body is given padding on smaller devices, this is to ensure that the content doesn't flow to the edge of the screen

--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,11 @@ html {
 }
 
 @layer base {
+
+	body {
+		@apply p-2 md:p-0;
+	}
+
 	input {
 		@apply block w-full border border-gray-300 my-1 p-1 rounded;
 	}
